[package]
name = "uciproxy"
version = "0.1.0"
edition = "2021"
description = "UCI chess engine proxy — connects to a uciserver and emulates a local engine"

[[bin]]
name = "uciproxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
